# can-i-binge-yet-python

./: .bandit  .dockerignore  .dockerignore.production  .env-example  .flake8  .gitignore  .yarnrc.yml  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  jest.config.js  package.json  pyproject.toml  tsconfig.json  webpack.common.js  webpack.production.js  wsgi.py
.github/workflows/: test.yml  test_and_deploy.yml
config/: application.py  auth.py  broadcast.py  cache.py  database.py  exceptions.py  filesystem.py  mail.py  notification.py  providers.py  queue.py  session.py
docker/node/: Dockerfile
docker/python/: Dockerfile
routes/: web.py
routes/api/app/: routes.py
routes/front_end/app/: routes.py
src/py/: Kernel.py
src/py/asset/: AssetDigest.py  AssetManifest.py  AssetRenderer.py  __init__.py  exceptions.py
src/py/cache/: Cache.py  __init__.py
src/py/file/: FileReader.py  __init__.py
src/py/id_generator/: AlphaNumericIdGenerator.py  __init__.py
src/py/jinja/: filters.py  functions.py
src/py/middlewares/: AuthenticationMiddleware.py  VerifyCsrfToken.py  __init__.py
src/py/models/: User.py
src/py/providers/: AppProvider.py
src/py/show/: SeasonEpisodesFormatter.py  SeasonEpisodesLoader.py  ShowImageFormatter.py  ShowLoader.py  ShowPageFormatter.py  ShowSearch.py  TrendingShows.py  __init__.py
src/py/themoviedb/: TheMovieDbClient.py  TheMovieDbConfiguration.py  __init__.py
src/py/url/: SlugGenerator.py  __init__.py
src/ts/: app.ts  tsconfig.json
src/ts/asset/: AssetCache.ts  CachedAssetsCatalog.ts
src/ts/custom_elements/: CacheableAsset.ts  ClearableInput.ts  LazyDetails.ts
src/ts/helpers/: timeout.ts  typeof.ts
src/ts/http/: HttpClient.ts
src/ts/service-worker/: service-worker.ts  tsconfig.json
stubs/masonite/api/: Api.pyi  __init__.pyi
stubs/masonite/auth/: MustVerifyEmail.pyi  Sign.pyi  __init__.pyi
stubs/masonite/authentication/: Auth.pyi  __init__.pyi
stubs/masonite/authorization/: AuthorizationResponse.pyi  AuthorizesRequest.pyi  Gate.pyi  Policy.pyi  __init__.pyi
stubs/masonite/broadcasting/: Broadcast.pyi  CanBroadcast.pyi  Channel.pyi  PresenceChannel.pyi  PrivateChannel.pyi  (+1 more)
ui/jinja/: _icon_sprite.html  _loading_notice.html  _snowfall.html  _top_bar.html  base_layout.html  home.html  search.html  show.html
ui/sass/: app.scss
(+329 files in other folders)
